<?xml version="1.0"?>
<package format="2">
  <name>pcl_radius_search</name>
  <version>0.0.1</version>
  <description>The pcl_radius_search package</description>

  <maintainer email="charlie.ho@itri.org.tw">Charlie Ho</maintainer>
  <author email="charlie.ho@itri.org.tw">Charlie Ho</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <!-- <depend>pcl_ros</depend> -->
  <depend>pcl_conversions</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
